# openenv-productivity-benchmark

./: .gitignore  Dockerfile  README.md  Validation.sh  __init__.py  baseline.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
env/: __init__.py  environment.py  models.py  tasks.py
server/: __init__.py  app.py
tests/: test_environment.py
