[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-productivity"
version = "1.0.0"
description = "Deterministic productivity benchmark for the OpenEnv RL Challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "openai>=1.30.0,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
